--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -1,5 +1,55 @@
+body {
+  background-color: #F5F6F7;
+}
+header {
+  background-color: #152855;
+}
+
+h1 {
+  color: white;
+  text-align: center;
+}
+
+h2 {
+  margin: 60px 0 10px 0;
+}
+
+main {
+  padding: 30px;
+}
+
 th {
-  border: 1px solid black;
-  background-color: palevioletred;
+  /* display: block; */
+  border: 1px solid white;
+  background-color: #686984;
   padding: 10px 30px;
+  color: white;
+}
+
+/* tr {
+  display: block;
+} */
+
+ul {
+  list-style: none;
+}
+
+#btn__add-account, #btn__add-transaction, #btn__add-category {
+  background-color: #0055B9;
+  color: white;
+  border: none;
+  padding: 10px;
+  border-radius: 120px;
+}
+
+#btn__add-account:hover, #btn__add-transaction:hover, #btn__add-category:hover {
+   cursor: pointer;
+   opacity: .7;
+   transform: scale(.9);
+   transition: all .5s;
+}
+
+#input__account {
+  width: 20rem;
+  padding: 5px;
 }
