--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -64,7 +64,7 @@ ul {
   flex-wrap: wrap;
 }
 
-.summary_box {
+#summary div {
   border-radius: 10px;
   box-shadow: 2px 2px 10px 1px rgb(215, 215, 215);
   background-color: white;
