--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -94,8 +94,15 @@ ul {
   box-shadow: 2px 2px 10px 1px rgb(215, 215, 215);
   background-color: white;
   margin: 5px;
-  padding: 10px;
+  padding: 20px;
   width: 300px;
+  height: 180px;
+}
+
+#summary div li {
+  font-size: 1.4rem;
+  /* color: #0055B9; */
+  /* list-style-type: square; */
 }
 
 #radio__deposit, #radio__withdraw, #radio__transfer {
@@ -108,6 +115,22 @@ ul {
 
 .filtered {
   display: table-row !important; 
+}
+
+.hero {
+  background-image: url(../images/img_hero.jpg);
+  width: 100%;
+  height: 600px;
+}
+
+.title__hero {
+   text-align: center;
+   padding-top: 280px;
+   color: white;
+   font-size: 4rem;
+   text-shadow: 2px 2px #152855;
+   font-style: italic;
+   font-family: 'Playfair Display', serif;
 }
 
 .wrap__amount, .wrap__category, .wrap__description, .wrap__radio {
